--- a/SyncTestProgram/.settings/org.eclipse.wst.common.component
+++ b/SyncTestProgram/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Capstone">
+    <wb-module deploy-name="SyncTestProgram">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Capstone"/>
-        <property name="java-output-path" value="/Capstone/build/classes"/>
+        <property name="java-output-path" value="/SyncTestProgram/build/classes"/>
+        <property name="context-root" value="SyncTestProgram"/>
     </wb-module>
 </project-modules>
